--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "tsx watch src/http/server.ts"
+    "dev": "tsx watch src/server.ts"
   },
   "keywords": [],
   "author": "",
@@ -17,8 +17,10 @@
   },
   "dependencies": {
     "@fastify/cookie": "^9.3.1",
+    "@fastify/websocket": "^10.0.1",
     "@prisma/client": "^5.9.1",
     "fastify": "^4.26.0",
+    "ioredis": "^5.4.1",
     "zod": "^3.22.4"
   }
 }
